fixed width cut off of stackview animation

--- a/src/routes/StackView/StackView.scss
+++ b/src/routes/StackView/StackView.scss
@@ -36,6 +36,7 @@ $stack-view__min-height: 82px;
   position: relative;
 
   height: auto;
+  width: 100vw;
   border-radius: $note__border-radius;
 
   overflow: hidden;
@@ -53,8 +54,14 @@ $stack-view__min-height: 82px;
 
 .stack-view__animation-wrapper {
   display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.stack-view__notes {
+  display: flex;
   flex-direction: row;
-  max-height: $stack-content-max-height;
+  justify-content: flex-start;
   gap: $spacing--sm;
 }
 
@@ -111,7 +118,7 @@ $stack-view__min-height: 82px;
 }
 
 @media screen and (max-width: $breakpoint--desktop) {
-  .stack-view__animation-wrapper {
+  .stack-view__notes {
     flex-direction: column;
     max-height: initial;
   }
